Refactor rabbit management for reverse proxies
Needed since rabbit can't bind to 443 directly.

--- a/salt/rabbitmq/rabbitmq.conf
+++ b/salt/rabbitmq/rabbitmq.conf
@@ -549,10 +549,12 @@
 ## HTTP listener and embedded Web server settings.
 # ## See https://rabbitmq.com/management.html for details.
 #
-{% if rabbitmq.management_plaintext -%}
 management.tcp.port = {{ rabbitmq.management_port }}
+{% if rabbitmq.management_expose_plaintext -%}
+management.tcp.ip   = 0.0.0.0
+{% else -%}
+management.tcp.ip   = 127.0.0.1
 {% endif -%}
-# management.tcp.ip   = 0.0.0.0
 #
 # management.tcp.shutdown_timeout   = 7000
 # management.tcp.max_keepalive      = 120
@@ -564,11 +566,10 @@ management.tcp.port = {{ rabbitmq.management_port }}
 ## HTTPS listener settings.
 ## See https://rabbitmq.com/management.html and https://rabbitmq.com/ssl.html for details.
 ##
-{% if not rabbitmq.management_plaintext -%}
-management.ssl.port       = {{ rabbitmq.management_ssl_port }}
+# management.ssl.port       = 15671
 # management.ssl.cacertfile = /path/to/ca_certificate.pem
-management.ssl.certfile   = /etc/rabbitmq/cert.pem
-management.ssl.keyfile    = /etc/rabbitmq/key.pem
+# management.ssl.certfile   = /etc/rabbitmq/cert.pem
+# management.ssl.keyfile    = /etc/rabbitmq/key.pem
 
 ## More TLS options
 # management.ssl.honor_cipher_order   = true
@@ -577,9 +578,8 @@ management.ssl.keyfile    = /etc/rabbitmq/key.pem
 # management.ssl.secure_renegotiate   = true
 
 ## Supported TLS versions
-management.ssl.versions.1 = tlsv1.2
+# management.ssl.versions.1 = tlsv1.2
 # management.ssl.versions.2 = tlsv1.1
-{%- endif %}
 
 ## Cipher suites the server is allowed to use
 # management.ssl.ciphers.1 = ECDHE-ECDSA-AES256-GCM-SHA384
