--- a/salt/elasticsearch/log4j2.properties
+++ b/salt/elasticsearch/log4j2.properties
@@ -30,7 +30,7 @@ appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size = 128MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.fileIndex = nomax
+appender.rolling.strategy.fileIndex = 14
 appender.rolling.strategy.action.type = Delete
 appender.rolling.strategy.action.basepath = ${sys:es.logs.base_path}
 appender.rolling.strategy.action.condition.type = IfFileName
