Enable setting redis maxmemory

--- a/salt/redis/redis.conf
+++ b/salt/redis/redis.conf
@@ -573,7 +573,9 @@ requirepass {{ salt['pillar.get'](redis['password_pillar']) }}
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+{% if 'maxmemory' in redis -%}
+maxmemory {{ redis['maxmemory'] }}
+{%- endif %}
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
