Enable setting redis maxmemory as percentage

--- a/salt/redis/redis.conf
+++ b/salt/redis/redis.conf
@@ -574,7 +574,11 @@ requirepass {{ salt['pillar.get'](redis['password_pillar']) }}
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 {% if 'maxmemory' in redis -%}
+{% if redis['maxmemory'].endswith('%') %}
+maxmemory {{ (grains.mem_total/100*(redis['maxmemory'][:-1]|int)) | int }}mb
+{% else %}
 maxmemory {{ redis['maxmemory'] }}
+{% endif %}
 {%- endif %}
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
