Set hostname based on minion id

--- a/salt/collectd/collectd.conf
+++ b/salt/collectd/collectd.conf
@@ -16,8 +16,8 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
-#Hostname "localhost"
-FQDNLookup true
+#Hostname "{{ grains.id }}"
+FQDNLookup false
 #BaseDir "/var/lib/collectd"
 #PluginDir "/usr/lib/collectd"
 #TypesDB "/usr/share/collectd/types.db" "/etc/collectd/my_types.db"
