Enable setting interval

--- a/salt/collectd/collectd.conf
+++ b/salt/collectd/collectd.conf
@@ -1,3 +1,5 @@
+{% from 'collectd/map.jinja' import collectd with context -%}
+
 #######################################
 # File managed by salt state collectd #
 #######################################
@@ -43,7 +45,7 @@ FQDNLookup false
 #       Interval 60                                                          #
 #   </LoadPlugin>                                                            #
 #----------------------------------------------------------------------------#
-#Interval 10
+Interval {{ collectd.interval }}
 
 #MaxReadInterval 86400
 #Timeout         2
