--- a/salt/collectd/defaults.yaml
+++ b/salt/collectd/defaults.yaml
@@ -1,1 +1,30 @@
 interval: 10
+plugins:
+    # Load syslog first to ensure we can log if other config fails
+    - syslog: |
+        LogLevel info
+    - cpu
+    - df: |
+        # ignore rootfs; else, the root file-system would appear twice, causing
+        # one of the updates to fail and spam the log
+        FSType rootfs
+        # ignore the usual virtual / temporary file-systems
+        FSType sysfs
+        FSType proc
+        FSType devtmpfs
+        FSType devpts
+        FSType tmpfs
+        FSType fusectl
+        FSType cgroup
+        IgnoreSelected true
+        ReportByDevice true
+        ValuesPercentage true
+    - disk
+    - entropy
+    - interface
+    - irq
+    - load
+    - memory
+    - processes
+    - swap
+    - users
