Split core plugins from other plugins
Makes it easier to use the default config for the core and only override
the extras.

--- a/salt/collectd/collectd.conf
+++ b/salt/collectd/collectd.conf
@@ -58,7 +58,7 @@ Interval {{ collectd.interval }}
 
 # TODO: Need a way for other states to register plugins to activate - similar setup as firewall?
 
-{% for plugin in collectd.plugins -%}
+{% for plugin in collectd.core_plugins + collectd.plugins -%}
 {% if plugin is mapping -%}
 {% for key, value in plugin.items() -%}
 LoadPlugin {{ key }}
