Collect internal stats by default

--- a/salt/collectd/collectd.conf
+++ b/salt/collectd/collectd.conf
@@ -29,7 +29,7 @@ FQDNLookup false
 # plugin name.                                                               #
 # Disabled by default.                                                       #
 #----------------------------------------------------------------------------#
-#CollectInternalStats false
+CollectInternalStats true
 
 #----------------------------------------------------------------------------#
 # Interval at which to query values. This may be overwritten on a per-plugin #
