--- a/salt/collectd/collectd.conf
+++ b/salt/collectd/collectd.conf
@@ -18,7 +18,7 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
-#Hostname "{{ grains.id }}"
+Hostname "{{ grains.id }}"
 FQDNLookup false
 #BaseDir "/var/lib/collectd"
 #PluginDir "/usr/lib/collectd"
