--- a/salt/collectd/defaults.yaml
+++ b/salt/collectd/defaults.yaml
@@ -8,12 +8,11 @@ core_plugins:
         # ignore rootfs; else, the root file-system would appear twice, causing
         # one of the updates to fail and spam the log
         FSType rootfs
-        # ignore the usual virtual / temporary file-systems
+        # ignore the virtual file systems
         FSType sysfs
         FSType proc
         FSType devtmpfs
         FSType devpts
-        FSType tmpfs
         FSType fusectl
         FSType cgroup
         IgnoreSelected true
