--- a/salt/mysql/mysqld.cnf
+++ b/salt/mysql/mysqld.cnf
@@ -53,5 +53,5 @@ character_set_server = utf8mb4
 server-id       = 1
 log-bin         = /var/log/mysql/log.bin
 
-# This needs to be set to allow creatio of non-deterministic functions
+# This needs to be set to allow creation of non-deterministic functions
 log_bin_trust_function_creators = 1
