Tweak some grafana settings

--- a/salt/grafana/grafana.ini
+++ b/salt/grafana/grafana.ini
@@ -1,5 +1,9 @@
-##################### Grafana Configuration Example #####################
-#
+{% set grafana = pillar.get('grafana', {}) -%}
+
+######################################
+# File managed by salt state grafana #
+######################################
+
 # Everything has defaults so you only need to uncomment things you want to
 # change
 
@@ -32,13 +36,13 @@
 ;protocol = http
 
 # The ip address to bind to, empty will bind to all interfaces
-;http_addr =
+http_addr = localhost
 
 # The http port  to use
 ;http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-;domain = localhost
+domain = {{ grafana.domain }}
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
@@ -187,7 +191,7 @@
 # No ip addresses are being tracked, only simple counters to track
 # running instances, dashboard and error counts. It is very helpful to us.
 # Change this option to false to disable reporting.
-;reporting_enabled = true
+reporting_enabled = false
 
 # The name of the distributor of the Grafana instance. Ex hosted-grafana, grafana-labs
 ;reporting_distributor = grafana-labs
@@ -213,11 +217,11 @@
 # default admin user, created on startup
 ;admin_user = admin
 
-# default admin password, can be changed before first start of grafana,  or in profile settings
+# default admin password, can be changed before first start of grafana, or in profile settings
 ;admin_password = admin
 
 # used for signing
-;secret_key = SW2YcwTIb9zpOOhoPsMm
+;secret_key =
 
 # disable gravatar profile images
 ;disable_gravatar = false
@@ -229,7 +233,7 @@
 ;disable_brute_force_login_protection = false
 
 # set to true if you host Grafana behind HTTPS. default is false.
-;cookie_secure = false
+cookie_secure = true
 
 # set cookie SameSite attribute. defaults to `lax`. can be set to "lax", "strict", "none" and "disabled"
 ;cookie_samesite = lax
@@ -240,10 +244,10 @@
 # Set to true if you want to enable http strict transport security (HSTS) response header.
 # This is only sent when HTTPS is enabled in this configuration.
 # HSTS tells browsers that the site should only be accessed using HTTPS.
-;strict_transport_security = false
+strict_transport_security = true
 
 # Sets how long a browser should cache HSTS. Only applied if strict_transport_security is enabled.
-;strict_transport_security_max_age_seconds = 86400
+strict_transport_security_max_age_seconds = 31536000
 
 # Set to true if to enable HSTS preloading option. Only applied if strict_transport_security is enabled.
 ;strict_transport_security_preload = false
@@ -272,7 +276,7 @@
 #################################### Snapshots ###########################
 [snapshots]
 # snapshot sharing options
-;external_enabled = true
+external_enabled = false
 ;external_snapshot_url = https://snapshots-origin.raintank.io
 ;external_snapshot_name = Publish to snapshot.raintank.io
 
@@ -298,10 +302,10 @@
 #################################### Users ###############################
 [users]
 # disable user signup / registration
-;allow_sign_up = true
+allow_sign_up = false
 
 # Allow non admin users to create organizations
-;allow_org_create = true
+allow_org_create = false
 
 # Set to true to automatically assign new users to the default organization (id 1)
 ;auto_assign_org = true
@@ -514,7 +518,7 @@
 
 #################################### Auth JWT ##########################
 [auth.jwt]
-;enabled = true
+enabled = false
 ;header_name = X-JWT-Assertion
 ;email_claim = sub
 ;username_claim = sub
@@ -702,7 +706,7 @@
 #################################### Alerting ############################
 [alerting]
 # Disable alerting engine & UI features
-;enabled = true
+enabled = false
 # Makes it possible to turn off alert rule execution but alerting UI is visible
 ;execute_alerts = true
 
