--- a/salt/grafana/grafana.ini
+++ b/salt/grafana/grafana.ini
@@ -769,7 +769,7 @@ enabled = false
 #################################### Explore #############################
 [explore]
 # Enable the Explore section
-;enabled = true
+enabled = false
 
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /metrics
