--- a/salt/postgres/postgresql.conf
+++ b/salt/postgres/postgresql.conf
@@ -84,7 +84,7 @@ unix_socket_directories = '/var/run/postgresql'	# comma-separated list of direct
 # - Security and Authentication -
 
 #authentication_timeout = 1min		# 1s-600s
-{% if not postgres.internal %}
+{% if not postgres.internal and not postgres.external_nossl %}
 ssl = true				# (change requires restart)
 ssl_ciphers = '{{ salt['pillar.get']('tls:cipher_suite', 'HIGH') }}' # allowed SSL ciphers
 					# (change requires restart)
