--- a/salt/postgres/postgresql.conf
+++ b/salt/postgres/postgresql.conf
@@ -96,7 +96,7 @@ ssl_key_file = '/etc/postgresql/{{ postgres.version }}/main/key.key' 		# (change
 #ssl_ca_file = ''			# (change requires restart)
 #ssl_crl_file = ''			# (change requires restart)
 {% endif %}
-password_encryption = {% if version >= 10 %}scram-sha-256{% else %}on{% endif %}
+password_encryption = {% if postgres.version >= 10 %}scram-sha-256{% else %}on{% endif %}
 #db_user_namespace = off
 
 # GSSAPI using Kerberos
