Make psql stats temp dir conditional

--- a/salt/postgres/postgresql.conf
+++ b/salt/postgres/postgresql.conf
@@ -458,7 +458,9 @@ log_timezone = 'localtime'
 #track_functions = none			# none, pl, all
 #track_activity_query_size = 1024	# (change requires restart)
 #update_process_title = on
+{% if postgres.version < 15 %}
 stats_temp_directory = '/var/run/postgresql/{{ postgres.version }}-main.pg_stat_tmp'
+{% endif %}
 
 
 # - Statistics Monitoring -
